feat(backend+frontend): license情報追加
