# 01-LandingPage/swagger/output/v1/typescript/model/environmentSchema.ts
@@ -1,0 +1,17 @@
+/**
+ * Landing Page API
+ * This is Landing Page API
+ *
+ * OpenAPI spec version: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+import { LicenseSchema } from './licenseSchema';
+
+export interface EnvironmentSchema { 
+    production?: Array<LicenseSchema>;
+    development?: Array<LicenseSchema>;
+}
