# 01-LandingPage/swagger/output/v1/typescript/model/licenseSchema.ts
@@ -1,0 +1,20 @@
+/**
+ * Landing Page API
+ * This is Landing Page API
+ *
+ * OpenAPI spec version: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+
+export interface LicenseSchema { 
+    name?: string;
+    version?: string;
+    license?: string;
+    npmjs?: string;
+    github?: string;
+    body?: string;
+}
